--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -71,9 +71,9 @@
           display: flex;
           flex-direction: column;
           gap: 10px;
-          width: 200px;
-          font-weight: 300;
-          color: gray;
+          width: 100px;
+          font-weight: 400;
+          color: rgb(29, 27, 27);
         }
       }
 
@@ -101,7 +101,7 @@
   }
 
   .menu {
-    width: 1400px;
+    width: 1200px;
     padding: 10px 0px;
     display: flex;
     justify-content: space-between;
